Layout design with Bootstrap and CSS

--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -25,7 +25,7 @@
       </ul>
 
       <div class="left">
-        <a routerLink="insert">Add new category...</a>
+        <button> <a routerLink="insert">Add new category...</a></button>
       </div>
 
       <div class="right">
@@ -39,4 +39,4 @@
         <h2 class="loading">Loading categories</h2>
     }
   </div>
-}
+} 
