--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  }
+  
+  main {
+    flex: 1;
+  }
+  
+  .navbar-brand {
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+  
+  .nav-link {
+    margin-right: 15px;
+  }
+  
+  .active {
+    font-weight: bold;
+  }
+  
+  .footer {
+    background-color: #f7f7f7;
+    text-align: center;
+  }
+  
+  .footer .container {
+    padding: 20px 0;
+  }
+  
+  .footer .text-muted {
+    margin: 0;
+  }
+  
+  .footer a {
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  .footer a:hover {
+    text-decoration: underline;
+  }
+  
