--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -22,9 +22,9 @@
             </div>
             </dialog>
         
-        <p>
+        <div>
         <button routerLink="/products"> Back to list</button>
-        </p>
+        </div>
     </div>
 } @else {
     <h2 class="loading">Loading product</h2>
